# ardrone_gui

./: CMakeLists.txt  CMakeLists.txt~  CMakeLists_1.txt  CMakeLists_3.txt  CMakeLists_4_main.txt  CMakeLists_L1.txt  CMakeLists_kao_original.txt  package.xml  package.xml~  plugin.xml  plugin.xml~  plugin_original.xml  setup.py  setup.py~
TUM_ukazi/: TUM_ukazi.txt  TUM_ukazi.txt~  c_autoInit.txt  c_autoTakeover.txt  c_clearCommands.txt  c_goto.txt  c_land.txt  c_lockScaleFP.txt  c_moveBy.txt  c_moveBy.txt~  c_moveByRel.txt  c_setInitialReachDist.txt  c_setMaxControl.txt  c_setReference.txt  c_setStayTime.txt  c_setStayWithinDist.txt  c_start.txt  c_stop.txt  c_takeoff.txt  f_reset.txt
include/my_namespace/: my_plugin.h  my_plugin.h~
launch/: dump.launch  fd.launch  joy.launch  joy_test.launch  joy_test_wifi.launch
parameters/: flight_animations.txt
resources/: led_animations.txt  resources.qrc
scripts/: ardrone_gui  controller.py  drone.sh  drone_ptam.sh  joy.py  test.py
src/: faces.cpp
src/my_namespace/: my_plugin.cpp  my_plugin.cpp~  my_plugin.h~  my_plugin.ui  my_plugin.ui.autosave  my_plugin_.h~
